<resources>
    <string name="app_name">daya</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="text_login">Log In</string>
    <string name="LOGIN">LOG IN</string>
    <string name="Register">Register</string>
    <string name="NEXT">NEXT</string>
    <string name="explanation">By signing up, you agree to Photo\'s Terms of Service and Privacy Policy</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_home">Home</string>
    <string name="text_profile">Profile</string>
    <string name="about">About</string>
    <string name="review">Review</string>
    <string name="borobudur">CANDI BOROBUDUR</string>
    <string name="about_borobudur">Built in the 7th century during the reign of the Sailendra Dynasty, the temple design follows Javanese Buddhist architecture, which blends the Indonesian indigenous cult of ancestor worship and the Buddhist concept of attaining Nirvana</string>
    <string name="text_logout">Logout</string>

    <string name="text_deep_link_landing">daya://app_navigation_fragment_landing</string>
    <string name="text_sign_in_with_google">Sign in with Google</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="profile_pict">Profile Picture</string>
    <string name="time_logo">Time Logo</string>
    <string name="location_logo">Location Logo</string>
    <string name="object_pict">Object Picture</string>

    <string name="Header_QnA" translatable="false">Question and Answer</string>
    <string name="tfe_qa_banner_description" translatable="false">Banner</string>
    <string name="tfe_qa_title_dataset_hint_text" translatable="false">Please select an article below.</string>
    <string name="tfe_qa_you_might_want_to_ask" translatable="false">You might want to ask?</string>
    <string name="tfe_qa_text_query" translatable="false">Text query</string>
    <string name="tfe_qa_ask_question" translatable="false">Ask question</string>
    <string name="tfe_qa_title" translatable="false">Here is the title of article</string>
    <string name="tfe_qa_content" translatable="false">This is the content of the article.</string>
    <string name="tfe_qa_suggest" translatable="false">This is the question suggestion"</string>

    <string name="arcore_not_installed">Please install ARCore</string>
    <string name="arcore_not_updated">Please update ARCore</string>
    <string name="app_not_updated">Please update this app</string>
    <string name="arcore_not_supported">This device does not support AR</string>
    <string name="loading_location_message">Loading your current location…</string>
    <string name="loading_fetching_message">Fetching nearby location…</string>
    <string name="camera_and_location_permission_request">Location and Camera permissions are needed to use this
        feature
    </string>
    <string name="text_take_photo">Take Photo</string>
    <string name="text_insert_comment">Share more about this place</string>
    <string name="text_comment_hint">Type information about this place here</string>
    <string name="text_post">Post</string>
    <string name="text_field_cannot_empty">Comment cannot be empty</string>
    <string name="text_comment_description">Insert Comment</string>
    <string name="text_menu_scan_nearby">Scan Nearby Places</string>
    <string name="text_question_answer">Question and Answer</string>

    <string name="text_ar_description">This feature lets you scan your nearby tourist attraction places and get detail information about it.</string>
    <string name="text_im_description">This feature lets you scan some related object from camera and get the detail information about it.</string>
    <string name="text_qna_description">This feature will answer all frequently questions about related place for you.</string>
    <string name="text_movable_information">This button is movable</string>
    <string name="text_information">Information</string>
    <string name="text_posting">Posting…</string>
    <string name="text_feature_not_available">This feature is currently not available</string>
    <string name="text_qna">Q &amp; A</string>
</resources>