<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="description"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_sheet_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_12dp"
        android:background="@color/app_color"
        >

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/text_insert_comment"
            android:textColor="@color/white"
            android:textSize="@dimen/text_24sp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_description"
            style="@style/TextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:hint="@string/text_comment_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@={description}"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:strokeColor="@color/white"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/tl_description"
            android:text="@string/text_post"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>