<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.detail.DetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_4dp"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:background="@android:color/transparent"
                android:elevation="4dp"
                android:outlineProvider="none"
                android:scaleType="centerInside"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_object"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/borobudur"
                android:contentDescription="@string/object_pict"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="bottom"
                android:layout_marginStart="@dimen/dimen_8dp"
                android:layout_marginBottom="@dimen/dimen_8dp"
                android:background="@color/background"
                android:padding="@dimen/dimen_4dp">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/borobudur"
                    android:textSize="@dimen/text_18sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>

                <androidx.appcompat.widget.AppCompatRatingBar
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>
        </FrameLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_4dp">

            <TableRow
                android:id="@+id/tr_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp">

                <ImageView
                    android:id="@+id/iv_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_4dp"
                    android:src="@drawable/ic_location"
                    android:layout_gravity="center"
                    android:contentDescription="@string/location_logo"/>

                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_4dp"
                    android:layout_marginEnd="@dimen/dimen_4dp"
                    android:textSize="@dimen/dimen_12dp"
                    android:layout_gravity="center"
                    tools:text="@string/borobudur"/>

            </TableRow>

            <TableRow
                android:id="@+id/tr_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tr_location"
                android:layout_marginTop="@dimen/dimen_8dp">

                <ImageView
                    android:id="@+id/iv_opening"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_4dp"
                    android:src="@drawable/ic_time"
                    android:layout_gravity="center"
                    android:contentDescription="@string/time_logo"/>

                <TextView
                    android:id="@+id/tv_opening_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_4dp"
                    android:layout_marginEnd="@dimen/dimen_4dp"
                    android:textSize="@dimen/dimen_12dp"
                    android:layout_gravity="center"
                    tools:text="@string/borobudur"/>

            </TableRow>

            <TextView
                android:id="@+id/label_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textStyle="bold"
                android:textColor="@color/dark_gray"
                android:layout_below="@+id/tr_time"
                android:layout_marginStart="@dimen/dimen_4dp"
                android:layout_marginTop="@dimen/dimen_8dp"/>


            <androidx.cardview.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/label_about"
                app:cardCornerRadius="@dimen/dimen_4dp"
                android:layout_margin="@dimen/dimen_4dp">

                <TextView
                    android:id="@+id/tv_information"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_8dp"
                    android:textSize="@dimen/dimen_12dp"
                    tools:text ="@string/about_borobudur" />

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <TextView
            android:id="@+id/label_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:text="@string/review"
            android:textColor="@color/dark_gray"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_8dp"
            android:padding="@dimen/dimen_8dp"/>

    </LinearLayout>

</ScrollView>