<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/text_64sp"
            android:textColor="@color/app_color"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:fontFamily="@font/comfortaa_regular"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <me.relex.circleindicator.CircleIndicator3
            android:id="@+id/circle_indicator"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_48dp"
            app:ci_drawable="@drawable/app_circle_indicator"
            app:ci_drawable_unselected="@drawable/app_circle_indicator"
            app:layout_constraintVertical_bias="0.95"
            app:layout_constraintTop_toBottomOf="@id/tv_app_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/barrier_button"
            />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:barrierDirection="top"
            app:constraint_referenced_ids="btn_sign_up,btn_login"
            />

        <Button
            android:id="@+id/btn_sign_up"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:layout_marginEnd="@dimen/dimen_8dp"
            android:layout_marginBottom="@dimen/dimen_16dp"
            android:paddingVertical="@dimen/dimen_8dp"
            android:text="@string/text_sign_up"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_bold"
            app:backgroundTint="@color/app_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_login"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <Button
            android:id="@+id/btn_login"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:layout_marginEnd="@dimen/dimen_16dp"
            android:layout_marginBottom="@dimen/dimen_16dp"
            android:paddingVertical="@dimen/dimen_8dp"
            android:text="@string/text_login"
            android:textColor="@color/app_color"
            android:fontFamily="@font/roboto_bold"
            app:strokeColor="@color/app_color"
            app:layout_constraintStart_toEndOf="@id/btn_sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>